--- a/poker-webapp/src/main/webapp/index.html
+++ b/poker-webapp/src/main/webapp/index.html
@@ -8,7 +8,8 @@
 <script id="sap-ui-bootstrap" type="text/javascript"
 	src="resources/sap-ui-core.js" data-sap-ui-theme="sap_bluecrystal"
 	data-sap-ui-libs="sap.m"
-	data-sap-ui-resourceRoots='{ "poker" : "./" }'></script>
+	data-sap-ui-resourceRoots='{ "poker" : "./" }'
+	data-sap-ui-bindingSyntax='complex'></script>
 
 <script type="text/javascript">
 	(function() {
