--- a/poker-webapp/src/main/webapp/index.html
+++ b/poker-webapp/src/main/webapp/index.html
@@ -14,11 +14,23 @@
 <script type="text/javascript">
 	(function() {
 		var app = new sap.m.App("poker-app");
+
+		var lobbyView = sap.ui.xmlview({
+			viewName : "poker.views.Lobby"
+		});
+		app.addPage(lobbyView);
+
 		var tableView = sap.ui.xmlview({
 			viewName : "poker.views.Table"
 		});
 		tableView.setModel(new sap.ui.model.json.JSONModel("api/table/1"));
 		app.addPage(tableView);
+		
+		lobbyView.getController().attachEvent("startGame", function() {
+			tableView.getController().refreshData();
+			app.to(tableView.getId());              
+		});
+
 		app.placeAt("content");
 	}());
 </script>
