--- a/src/main/webapp/TestIndex.html
+++ b/src/main/webapp/TestIndex.html
@@ -6,16 +6,7 @@
 
 
 <script type="text/javascript">
-	function getUrlVars() {
-		var vars = {};
-		var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi,
-				function(m, key, value) {
-					vars[key] = value;
-				});
-		return vars;
-	}
-
-	var tokens = {
+	const tokens = {
 		'al-capone' : 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoiYWwtY2Fwb25lIiwidXNlcl9uYW1lIjoiQWwgQ2Fwb25lIiwiZXhwIjoyMTg0MzA2ODkxLCJpYXQiOjE1NTM1ODY4OTF9.TgUNvdbDHp6TgTrNUur8-WPyt0eG560QFVdJdGMibHc',
 		'pat-garret' : 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoicGF0LWdhcnJldCIsInVzZXJfbmFtZSI6IlBhdCBHYXJyZXQiLCJleHAiOjIxODQzMDY4OTEsImlhdCI6MTU1MzU4Njg5MX0.NTPdpTNz1era6YjFigQjadHjsqC0Rg28tqCyuP0I_fw',
 		'wyatt-earp' : 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoid3lhdHQtZWFycCIsInVzZXJfbmFtZSI6Ild5YXR0IEVhcnAiLCJleHAiOjIxODQzMDY4OTEsImlhdCI6MTU1MzU4Njg5MX0.A3I7wqwWNQU6cNIkchfSd6prmqO-2P54a9Wpj_SIfyQ',
@@ -27,13 +18,25 @@
 		'madame-moustache' : 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoibWFkYW1lLW1vdXN0YWNoZSIsInVzZXJfbmFtZSI6Ik1hZGFtZSBNb3VzdGFjaGUiLCJleHAiOjIxODQzMDY4OTEsImlhdCI6MTU1MzU4Njg5MX0.8rrcl73xbL8BkCWr4ny8ibW-lctbD1-rLtuCf1TCkUM'
 	}
 
-	let vars = getUrlVars();
-	let username = vars['user'];
+	const username = window.location.hash.substring(1);
+	const token = tokens[username];
+	const expiry = 'Thu, 18 Dec 2038 12:00:00 UTC';
+	const domain = 'localhost';
 
-	(function() {
-		document.cookie = `Authorization=${'Bearer '+tokens[username]}; expires=Thu, 18 Dec 2038 12:00:00 UTC; domain=localhost`;
-		window.location.replace("index.html");
-	}());
+	document.cookie = `jwt=${token}; expires=${expiry}; domain=${domain}`;
+	document.cookie = `UserName=${username}; expires=${expiry}; domain=${domain}`;
+
+	const req = new XMLHttpRequest();
+	req.open("POST", "api/table/1/players");
+	req.setRequestHeader('Content-type', 'application/json');
+
+	req.send(`{ "playerName" : "${username}" }`);
+
+	req.onreadystatechange = function() {
+		if (req.readyState == 4 && req.status == 204) {
+			window.location.replace("index.html");
+		}
+	};
 </script>
 </head>
 
