--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="utf-8">
     <title>Poker Lobby</title>
-    <link rel="stylesheet" type="text/css" href="lib/fiori-fundamentals.min.css">
+    <link rel="stylesheet" type="text/css" href="https://github.wdf.sap.corp/pages/agile-se-java-nodejs/poker-ui/lib/fundamental-styles/fundamental-styles.min.css">
     </link>
 
-    <script src="lib/vue.min.js"></script>
-    <script src="lib/vue-router.js"></script>
-    <script src="lib/FundamentalVue.umd.min.js"></script>
-    <script src="lib/superagent.js"></script>
-    <script src="lib/require.js"></script>
-    <script src="lobby.js"></script>
+    <script src="https://github.wdf.sap.corp/pages/agile-se-java-nodejs/poker-ui/lib/vue.min.js"></script>
+    <script src="https://github.wdf.sap.corp/pages/agile-se-java-nodejs/poker-ui/lib/vue-router.js"></script>
+    <script src="https://github.wdf.sap.corp/pages/agile-se-java-nodejs/poker-ui/lib/FundamentalVue.umd.min.js"></script>
+    <script src="https://github.wdf.sap.corp/pages/agile-se-java-nodejs/poker-ui/lib/superagent.js"></script>
+    <script src="https://github.wdf.sap.corp/pages/agile-se-java-nodejs/poker-ui/lib/require.js"></script>
+    <script src="https://github.wdf.sap.corp/pages/agile-se-java-nodejs/poker-ui/lobby.js"></script>
 </head>
 
 <body>
