--- a/src/main/webapp/table/index.html
+++ b/src/main/webapp/table/index.html
@@ -6,30 +6,16 @@
 <title>Poker</title>
 
 <script id="sap-ui-bootstrap" type="text/javascript"
-	src="../resources/sap-ui-core.js" data-sap-ui-theme="sap_bluecrystal"
+	src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js" data-sap-ui-theme="sap_bluecrystal"
 	data-sap-ui-libs="sap.m"
-	data-sap-ui-resourceRoots='{ "poker" : "./" }'
+	data-sap-ui-resourceRoots='{ "poker" : "https://github.wdf.sap.corp/pages/agile-se-java-nodejs/poker-ui/table" }'
 	data-sap-ui-bindingSyntax='complex'></script>
 
 <style>
       .sapMLIB.currentPlayer { background: #009de0; }
 </style>
-    
-<script type="text/javascript">
-	(function() {
-		var app = new sap.m.App("poker-app");
 
-		var tableView = sap.ui.xmlview({
-			viewName : "poker.views.Table",
-			viewData : {
-				model : new sap.ui.model.json.JSONModel()
-			}
-		});
-		app.addPage(tableView);
-		
-		app.placeAt("content");
-	}());
-</script>
+<script type="text/javascript" src="https://github.wdf.sap.corp/pages/agile-se-java-nodejs/poker-ui/table/main.js"></script>
 </head>
 
 <body class="sapUiBody">
