--- a/src/main/resources/static/table/index.html
+++ b/src/main/resources/static/table/index.html
@@ -6,7 +6,7 @@
 <title>Poker</title>
 
 <script id="sap-ui-bootstrap" type="text/javascript"
-	src="../resources/sap-ui-core.js" data-sap-ui-theme="sap_bluecrystal"
+	src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js" data-sap-ui-theme="sap_bluecrystal"
 	data-sap-ui-libs="sap.m"
 	data-sap-ui-resourceRoots='{ "poker" : "./" }'
 	data-sap-ui-bindingSyntax='complex'></script>
