starting point with new api (wip)

--- a/src/main/resources/static/login/index.html
+++ b/src/main/resources/static/login/index.html
@@ -16,7 +16,7 @@
     data-sap-ui-theme="sap_horizon_dark"
     data-sap-ui-language="en-US"
     data-sap-ui-resourceRoots='{
-			"cc.ase.poker.table": "./"
+			"cc.ase.poker.login": "./"
 		}'
     data-sap-ui-onInit="module:sap/ui/core/ComponentSupport"
     data-sap-ui-compatVersion="edge"
@@ -27,10 +27,10 @@
 <body class="sapUiBody">
   <div
     data-sap-ui-component
-    data-name="cc.ase.poker.table"
+    data-name="cc.ase.poker.login"
     data-id="container"
     data-settings='{
-      "id": "table"
+      "id": "login"
     }'
   ></div>
 </body>
